# Thesis

./: CapExp1.py  CapExp1_2030.py  CapExp1_2030_Rep_week.py  CapExp1_2030_v02.py  NEM2.py  NEM3.py  README.md  VRE_Traces_By_Region_v03.csv  VRE_Traces_By_Region_v04_6_mo.csv  VRE_Traces_By_Region_v05_rep_week.csv  buses.csv  candi_demand_cap_exp_v01.csv  candi_demand_cap_exp_v02_6_mo.csv  candi_demand_cap_exp_v03_rep_week.csv  candi_hundred_percent.csv  carriers.csv  demand.csv  demand_cap_exp_v01.csv  demand_cap_exp_v02_6_mo.csv  demand_cap_exp_v03_rep_week.csv  extendable_generators.csv  extendable_generators_v02.csv  extendable_storage_units.csv  extendable_storage_units_v02.csv  generators.csv  generators_t.p_max_pu_v04_6_mo.csv  generators_t.p_max_pu_v05_rep_week.csv  generators_v02.csv  links.csv  links_cap_exp.csv  loads.csv  pyproject.toml  storage_units.csv
