[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pypsa = "^0.25"
pandas = "^2"
matplotlib = "*"
numpy = "*"
xarray = "*"
gurobipy = "^10.0.3"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
